--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+array2d = "0.2.1"
 rand = "0.8.1"
 [dependencies.sdl2]
 git = "https://github.com/rust-sdl2/rust-sdl2"
