--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ version = "0.1.0"
 
 [dependencies]
 array2d = "0.2.1"
+bincode = "1.3.3"
+clap = {version = "3.0.1", features = ["derive"]}
 rand = "0.8.1"
+serde = {version = "1.0.133", features = ["derive"]}
+tokio = {version = "1.15.0", features = ["full"]}
+
 [dependencies.sdl2]
 git = "https://github.com/rust-sdl2/rust-sdl2"
